# SchemaBloom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_DESCRIPTION.md  LICENSE  README.md  README_SECURITY.md  RELEASE_NOTES.md  SECURITY_RULES.md  check_security.py  pyproject.toml
.cursor/rules/: rules.mdc
.github/workflows/: publish.yml
docs/: Diary.md  Project.md  Tasktracker.md  architectural_decisions.md  changelog.md  qa.md
examples/: advanced_schema.json  ecommerce_schema.json  sample_schema.json
src/json_to_orm/: __init__.py  __main__.py  cli.py  core.py
src/json_to_orm/generators/: __init__.py  base.py  django.py  prisma.py  sqlalchemy.py
src/json_to_orm/parser/: __init__.py  exceptions.py  json_parser.py  validator.py
src/json_to_orm/templates/django/: models.py.j2
src/json_to_orm/templates/prisma/: model.j2  schema.j2
src/json_to_orm/templates/sqlalchemy/: models.py.j2
src/json_to_orm/utils/: __init__.py  helpers.py  logger.py  template_filters.py
test_output/: models.py  schema.prisma
tests/: __init__.py  test_cli.py  test_generators.py  test_parser.py  test_utils.py
