[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-to-orm"
version = "1.0.1"
description = "A powerful CLI utility for generating ORM models from JSON schemas. Supports Prisma, Django, and SQLAlchemy with automatic relationship generation."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SchemaBloom Team", email = "team@schema-bloom.com"}
]
maintainers = [
    {name = "SchemaBloom Team", email = "team@schema-bloom.com"}
]
keywords = [
    "orm", "json", "generator", "cli", "prisma", "django", "sqlalchemy", 
    "database", "models", "code-generation", "schema", "converter", 
    "python", "automation", "development-tools", "database-tools",
    "json-to-orm", "model-generator", "schema-converter", "orm-generator"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Database",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: Django",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "jsonschema>=4.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
json-to-orm = "json_to_orm.cli:main"

[project.urls]
Homepage = "https://github.com/11123aa/SchemaBloom"
Repository = "https://github.com/11123aa/SchemaBloom.git"
"Bug Tracker" = "https://github.com/11123aa/SchemaBloom/issues"
Documentation = "https://github.com/11123aa/SchemaBloom/blob/main/README.md"
"Source Code" = "https://github.com/11123aa/SchemaBloom"
"Download" = "https://github.com/11123aa/SchemaBloom/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"